--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,18 +12,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
       with:
-        java-version: 1.8
-    
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew 
-    - name: Validate Gradle wrapper
-#       uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-      run: ./gradlew wrapper
-    - name: Build with Gradle
-      run: ./gradlew build
+        java-version: '11'
+        distribution: 'adopt'
+    - name: Go To Awsome Directory
+      run: cd awsome
+    - name: Build with maven
+      run: mvn clean install
     - name: Test All Scenarios
-      run: ./gradlew TestScenarios
+      run: mvn test
