--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,7 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-    - name: Go To Awsome Directory
-      run: cd awsome && pwd && ls -la
     - name: Build with maven
-      run: mvn clean install
+      run: cd awsome && mvn clean install
     - name: Test All Scenarios
       run: mvn test
