--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,6 @@ jobs:
     - name: Test All Scenario03Tests
       run: echo ==============================  Scenario03Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario03Tests"
-
     - name: Test All Scenario04Tests
       run: echo ==============================  Scenario04Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario04Tests"
@@ -66,3 +65,15 @@ jobs:
     - name: Test All Scenario15Tests
       run: echo ==============================  Scenario15Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario15Tests"
+    - name: Test All Scenario16Tests
+      run: echo ==============================  Scenario16Tests ====================================
+        \ && cd awsome && mvn test -Dtest="Scenario16Tests"
+    - name: Test All Scenario17Tests
+      run: echo ==============================  Scenario17Tests ====================================
+        \ && cd awsome && mvn test -Dtest="Scenario17Tests"
+    - name: Test All Scenario18Tests
+      run: echo ==============================  Scenario18Tests ====================================
+        \ && cd awsome && mvn test -Dtest="Scenario18Tests"
+    - name: Test All Scenario19Tests
+      run: echo ==============================  Scenario19Tests ====================================
+        \ && cd awsome && mvn test -Dtest="Scenario19Tests"
