--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,9 +79,7 @@ jobs:
         \ && cd awsome && mvn test -Dtest="Scenario19Tests"
     - name: Test All Scenario20Test
       run: echo ==============================  Scenario20Tests ====================================
-        \ && cd awsome && 
-      \ mvn test -Dtest="Scenario20Tests"
+        \ && cd awsome && mvn test -Dtest="Scenario20Tests"
     - name: Test All Scenario21Test
       run: echo ==============================  Scenario21Tests ====================================
-        \ && cd awsome && 
-      \ mvn test -Dtest="Scenario21Tests"
+        \ && cd awsome && mvn test -Dtest="Scenario21Tests"
