--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,76 +18,99 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-    - name: Build with maven
-      run: cd awsome && mvn clean install -DskipTests
+
     - name: Test All Scenario01Tests
       run: echo ==============================  Scenario01Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario01Tests"
+
     - name: Test All Scenario02Tests
       run: echo ==============================  Scenario02Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario02Tests"
+
     - name: Test All Scenario03Tests
       run: echo ==============================  Scenario03Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario03Tests"
+
     - name: Test All Scenario04Tests
       run: echo ==============================  Scenario04Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario04Tests"
+
     - name: Test All Scenario05Tests
       run: echo ==============================  Scenario05Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario05Tests"
+
     - name: Test All Scenario06Tests
       run: echo ==============================  Scenario06Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario06Tests"
+
     - name: Test All Scenario07Tests
       run: echo ==============================  Scenario07Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario07Tests"
+
     - name: Test All Scenario08Tests
       run: echo ==============================  Scenario08Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario08Tests"
+
     - name: Test All Scenario09Tests
       run: echo ==============================  Scenario09Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario09Tests"
+
     - name: Test All Scenario10Tests
       run: echo ==============================  Scenario10Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario10Tests"
+
     - name: Test All Scenario01Tests
       run: echo ==============================  Scenario11Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario11Tests"
+
     - name: Test All Scenario12Tests
       run: echo ==============================  Scenario12Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario12Tests"
+
     - name: Test All Scenario13Tests
       run: echo ==============================  Scenario13Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario13Tests"
+
     - name: Test All Scenario14Tests
       run: echo ==============================  Scenario14Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario14Tests"
+
     - name: Test All Scenario15Tests
       run: echo ==============================  Scenario15Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario15Tests"
+
     - name: Test All Scenario16Tests
       run: echo ==============================  Scenario16Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario16Tests"
+
     - name: Test All Scenario17Tests
       run: echo ==============================  Scenario17Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario17Tests"
+
     - name: Test All Scenario18Tests
       run: echo ==============================  Scenario18Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario18Tests"
+
     - name: Test All Scenario19Tests
       run: echo ==============================  Scenario19Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario19Tests"
+
     - name: Test All Scenario20Test
       run: echo ==============================  Scenario20Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario20Tests"
+
     - name: Test All Scenario21Test
       run: echo ==============================  Scenario21Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario21Tests"
+
     - name: Test All Scenario22Test
       run: echo ==============================  Scenario22Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario22Tests"
+
     - name: Test All Scenario23Test
       run: echo ==============================  Scenario23Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario23Tests"
 
-
+    - name: Test All Scenario24Test
+      run: echo ==============================  Scenario24Tests ====================================
+        \ && cd awsome && mvn test -Dtest="Scenario24Tests"
