updated for Scenario 28

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -126,3 +126,7 @@ jobs:
     - name: Test All Scenario27Test
       run: echo ==============================  Scenario27Tests ====================================
         \ && cd awsome && mvn test -Dtest="Scenario27Tests"
+
+    - name: Test All Scenario28Test
+      run: echo ==============================  Scenario28Tests ====================================
+        \ && cd awsome && mvn test -Dtest="Scenario28Tests"
