--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -182,3 +182,11 @@ jobs:
       - name: Test All Scenario41Test
         run: echo ==============================  Scenario41Tests ====================================
           \ && cd awsome && mvn test -Dtest="Scenario41Tests"
+
+      - name: Test All Scenario42Test
+        run: echo ==============================  Scenario42Tests ====================================
+          \ && cd awsome && mvn test -Dtest="Scenario42Tests"
+
+      - name: Test All Scenario43Test
+        run: echo ==============================  Scenario43Tests ====================================
+          \ && cd awsome && mvn test -Dtest="Scenario43Tests"
