--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -187,6 +187,7 @@ jobs:
         run: echo ==============================  Scenario42Tests ====================================
           \ && cd awsome && mvn test -Dtest="Scenario42Tests"
 
-      - name: Test All Scenario43Test
-        run: echo ==============================  Scenario43Tests ====================================
-          \ && cd awsome && mvn test -Dtest="Scenario43Tests"
+
+      - name: Test All Scenario
+        run: echo ==============================  All The Scenario ====================================
+          \ && cd awsome && mvn test
