--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -202,6 +202,14 @@ jobs:
         run: echo ==============================  Scenario45Tests ====================================
           \ && cd awsome && mvn test -Dtest="Scenario45Tests"
 
+
+      - name: Test Scenario46Test
+        run: echo ==============================  Scenario46Tests ====================================
+          \ && cd awsome && mvn test -Dtest="Scenario46Tests"
+
+
+
       - name: Test All Scenarios
         run: echo ==============================  All The Scenario ====================================
           \ && cd awsome && mvn test
+
