--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -251,7 +251,12 @@ jobs:
       - name: Test Scenario55Test
         run: echo ==============================  Scenario55Tests ====================================
           \ && cd awsome && mvn test -Dtest="Scenario55Tests"
-      
+
+
+      - name: Test Scenario56Test
+        run: echo ==============================  Scenario56Tests ====================================
+          \ && cd awsome && mvn test -Dtest="Scenario56Tests"
+
       - name: Test All Scenarios
         run: echo ==============================  All The Scenario ====================================
           \ && cd awsome && mvn test
